Put in a few hacks to make the map popup not take up the full screen.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="search">Search</string>
+    <string name="item_title">Title</string>
+    <string name="item_desc">Desc</string>
 </resources>
