click list view item and go to external url in browser

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="search">Search</string>
     <string name="item_title">Title</string>
     <string name="item_desc">Desc</string>
+    <item type="id" name="TAG_VIEW_EXTERNAL_LINK"/>
 </resources>
